fix: text field overflow style

--- a/packages/components/text-field/src/index.less
+++ b/packages/components/text-field/src/index.less
@@ -12,6 +12,7 @@
     display: inline-flex;
     flex-direction: row;
     border-radius: inherit;
+    overflow: hidden;
   }
 
   &--outlined {
@@ -210,6 +211,7 @@
     text-align: left;
     z-index: 1;
     transform-origin: left;
+    max-width: calc(100% - 32px) !important;
     color: var(--md-sys-color-on-surface-variant);
     transition: color 200ms cubic-bezier(0, 0, 0.2, 1) 0ms,
       transform 200ms cubic-bezier(0, 0, 0.2, 1) 0ms,
